--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,1 +1,41 @@
-# meta 
+---
+# Copyright 2018, taseer94@gmail.com
+# All rights reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+
+galaxy_info:
+  author: Taseer
+  description: Blazar deployment with OpenStack Ansible
+  company: Independent
+  license: Apache2
+
+  min_ansible_version: 1.0
+
+  platforms:
+  - name: Ubuntu
+    versions:
+    - trusty
+    - xenial
+  galaxy_tags:
+    - cloud
+    - openstack
+    - blazar
+    - python
+
+dependencies:
+  - pip_install
+  - role: apt_package_pinning
+    when:
+- ansible_pkg_mgr == 'apt'
