--- a/tasks/blazar_db_setup.yml
+++ b/tasks/blazar_db_setup.yml
@@ -14,16 +14,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- include: blazar_pre_install.yml
-
-- include: blazar_install.yml
-
-- include: blazar_post_install.yml
-
-- include: blazar_service_setup.yml
-  when: >
-    inventory_hostname == groups['blazar_all'][0]
-
-- include: blazar_db_setup.yml
-  when: >
-    inventory_hostname == groups['blazar_all'][0]
+- name: create blazar database schema
+  command: "{{ blazar_bin }}/blazar-db-manage
+    --config-file {{ blazar_conf_dir }}/blazar.conf upgrade head"
+  become: yes
+  become_user: "{{ blazar_system_user_name }}"
+  changed_when: False
