--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,6 +1,5 @@
 ---
-# Copyright 2018, taseer94@gmail.com
-# All rights reserved.
+# Copyright 2017, taseer94@gmail.com
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,16 +13,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- include: blazar_pre_install.yml
+# Setup the host
+- include: common/test-setup-host.yml
 
-- include: blazar_install.yml
+# Install RabbitMQ/MariaDB
+- include: common/test-install-infra.yml
 
-- include: blazar_post_install.yml
+# Install Keystone
+- include: common/test-install-keystone.yml
 
-- include: blazar_service_setup.yml
-  when: >
-    inventory_hostname == groups['blazar_all'][0]
+# Install Blazar Installation
+- include: test-install-blazar.yml
 
-- include: blazar_db_setup.yml
-  when: >
-    inventory_hostname == groups['blazar_all'][0]
+# Test Blazar Functional
+
+- include: test-blazar-functional.yml
