--- a/tests/host_vars/openstack1.yml
+++ b/tests/host_vars/openstack1.yml
@@ -1,6 +1,5 @@
 ---
-# Copyright 2018, taseer94@gmail.com
-# All rights reserved.
+# Copyright 2017, taseer94@gmail.com
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,12 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- name: Restart blazar services
-  service:
-    name: "{{ item }}"
-    enabled: yes
-    state: restarted
-    pattern: "{{ item }}"
-    daemon_reload: "{{ (ansible_service_mgr == 'systemd') | ternary('yes', omit) }}"
-  with_items: "{{ blazar_service_names }}"
-  failed_when: false
+ansible_host: 10.1.1.102
+ansible_become: True
+ansible_user: root
+tunnel_address: 10.1.2.102
+neutron_local_ip: 10.1.2.102
