--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ whitelist_externals =
     bash
 setenv =
     PYTHONUNBUFFERED=1
-    ROLE_NAME=os_nova
+    ROLE_NAME=os_blazar
     TEST_IDEMPOTENCE=false
     VIRTUAL_ENV={envdir}
     WORKING_DIR={toxinidir}
