--- a/tasks/blazar_init_systemd.yml
+++ b/tasks/blazar_init_systemd.yml
@@ -1,39 +1,23 @@
----
-# Copyright 2017, taseer94@gmail.com
-# All rights reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 - name: Create TEMP run dir
   file:
-    path: "/var/run/{{ program_name }}"
+    path: "/var/run/{{ blazar_program_name }}"
     state: directory
-    owner: "{{ system_user }}"
-    group: "{{ system_group }}"
+    owner: "{{ blazar_system_user_name }}"
+    group: "{{ blazar_system_group_name }}"
     mode: "02755"
 
 - name: Create TEMP lock dir
   file:
-    path: "/var/lock/{{ program_name }}"
+    path: "/var/lock/{{ blazar_program_name }}"
     state: directory
-    owner: "{{ system_user }}"
-    group: "{{ system_group }}"
+    owner: "{{ blazar_system_user_name }}"
+    group: "{{ blazar_system_group_name }}"
     mode: "02755"
 
-- name: Create tempfile.d entry
+- name: Create tmpfiles.d entry
   template:
-    src: "blazar-systemd-tempfiles.j2"
-    dest: "/etc/tmpfiles.d/blazar.conf"
+    src: "blazar-systemd-tmpfiles.j2"
+    dest: "/etc/tmpfiles.d/openstack-{{ blazar_program_name }}.conf"
     mode: "0644"
     owner: "root"
     group: "root"
@@ -41,12 +25,12 @@
     - Restart blazar services
 
 - name: Place the systemd init script
-  template:
+  config_template:
     src: "blazar-systemd-init.j2"
-    dest: "/etc/systemd/system/{{ program_name }}.service"
+    dest: "/etc/systemd/system/{{ blazar_program_name }}.service"
     mode: "0644"
     owner: "root"
     group: "root"
-  register: systemd_init
+    config_type: "ini"
   notify:
     - Restart blazar services
