--- a/tasks/blazar_install.yml
+++ b/tasks/blazar_install.yml
@@ -14,6 +14,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+- name: Install distro packages
+  package:
+    name: "{{ blazar_distro_packages }}"
+    state: "{{ blazar_package_state }}"
+    update_cache: "{{ (ansible_pkg_mgr in ['apt', 'zypper']) | ternary('yes', omit) }}"
+    cache_valid_time: "{{ (ansible_pkg_mgr == 'apt') | ternary(cache_timeout, omit) }}"
+  register: install_packages
+  until: install_packages | success
+  retries: 5
+  delay: 2
+
 - name: Create developer mode constraint file
   copy:
     dest: "/opt/developer-pip-constraints.txt"
@@ -25,8 +36,8 @@
 
 - name: Install required pip packages
   pip:
-    name: "{{ blazar_requires_pip_packages | join(' ') }}"
-    state: "{{ blazar_package_state }}"
+    name: "{{ blazar_requires_pip_packages }}"
+    state: "{{ blazar_pip_package_state }}"
     extra_args: >-
       {{ blazar_developer_mode | ternary(pip_install_developer_constraints | default('--constraint /opt/developer-pip-constraints.txt'), '') }}
       {{ (pip_install_upper_constraints is defined) | ternary('--constraint ' + pip_install_upper_constraints | default(''),'') }}
@@ -41,7 +52,7 @@
     url: "{{ blazar_venv_download_url | replace('tgz', 'checksum') }}"
     return_content: yes
   register: blazar_venv_checksum
-  when: not blazar_developer_mode | bool
+  when: blazar_venv_download | bool
 
 - name: Attempt venv download
   get_url:
@@ -49,7 +60,7 @@
     dest: "/var/cache/{{ blazar_venv_download_url | basename }}"
     checksum: "sha1:{{ blazar_venv_checksum.content | trim }}"
   register: blazar_get_venv
-  when: not blazar_developer_mode | bool
+  when: blazar_venv_download | bool
 
 - name: Remove existing venv
   file:
@@ -69,28 +80,42 @@
     src: "/var/cache/{{ blazar_venv_download_url | basename }}"
     dest: "{{ blazar_bin | dirname }}"
     copy: "no"
-  when:
-    - not blazar_developer_mode | bool
-    - blazar_get_venv | changed or blazar_venv_dir | changed
+  when: blazar_get_venv | changed
+  notify:
+    - Restart blazar services
 
 - name: Install pip packages
   pip:
     name: "{{ blazar_pip_packages | join(' ') }}"
-    state: "{{ blazar_package_state }}"
+    state: "{{ blazar_pip_package_state }}"
     virtualenv: "{{ blazar_bin | dirname }}"
     virtualenv_site_packages: "no"
+    extra_args: >-
+      {{ blazar_developer_mode | ternary(pip_install_developer_constraints | default('--constraint /opt/developer-pip-constraints.txt'), '') }}
+      {{ (pip_install_upper_constraints is defined) | ternary('--constraint ' + pip_install_upper_constraints | default(''),'') }}
+      {{ pip_install_options | default('') }}
   register: install_packages
   until: install_packages|success
   retries: 5
   delay: 2
-  when: blazar_developer_mode | bool
+  when: blazar_get_venv | failed or blazar_get_venv | skipped
+  notify:
+    - Restart blazar services
+
+- name: Remove python from path first (CentOS, openSUSE)
+  file:
+    path:  "{{ blazar_bin | dirname }}/bin/python2.7"
+    state: "absent"
+  when:
+    - ansible_pkg_mgr in ['yum', 'dnf', 'zypper']
+    - blazar_get_venv | changed
 
 - name: Update virtualenv path
-  command: >
-    virtualenv-tools --update-path=auto --reinitialize {{ blazar_bin | dirname }}
-  when:
-    - not blazar_developer_mode | bool
-    - blazar_get_venv | changed or blazar_venv_dir | changed
+  shell: |
+    find {{ blazar_bin }} -name \*.pyc -delete
+    sed -si '1s/^.*python.*$/#!{{ blazar_bin | replace ('/','\/') }}\/python/' {{ blazar_bin }}/*
+    virtualenv {{ blazar_bin | dirname }}
+  when: blazar_get_venv | changed
 
 - name: Record the venv tag deployed
   ini_file:
