--- a/tasks/blazar_init_systemd.yml
+++ b/tasks/blazar_init_systemd.yml
@@ -1,36 +1,40 @@
 - name: Create TEMP run dir
   file:
-    path: "/var/run/{{ blazar_program_name }}"
+    path: "/var/run/{{ item.service_name }}"
     state: directory
     owner: "{{ blazar_system_user_name }}"
     group: "{{ blazar_system_group_name }}"
     mode: "02755"
+  with_items: "{{ blazar_services }}"
 
 - name: Create TEMP lock dir
   file:
-    path: "/var/lock/{{ blazar_program_name }}"
+    path: "/var/lock/{{ item.service_name }}"
     state: directory
     owner: "{{ blazar_system_user_name }}"
     group: "{{ blazar_system_group_name }}"
     mode: "02755"
+  with_items: "{{ blazar_services }}"
 
 - name: Create tmpfiles.d entry
   template:
     src: "blazar-systemd-tmpfiles.j2"
-    dest: "/etc/tmpfiles.d/openstack-{{ blazar_program_name }}.conf"
+    dest: "/etc/tmpfiles.d/openstack-{{ item.service_name }}.conf"
     mode: "0644"
     owner: "root"
     group: "root"
+  with_items: "{{ blazar_services }}"
   notify:
     - Restart blazar services
 
 - name: Place the systemd init script
   config_template:
     src: "blazar-systemd-init.j2"
-    dest: "/etc/systemd/system/{{ blazar_program_name }}.service"
+    dest: "/etc/systemd/system/{{ item.service_name }}.service"
     mode: "0644"
     owner: "root"
     group: "root"
     config_type: "ini"
+    with_items: "{{ blazar_services }}"
   notify:
     - Restart blazar services
