--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,7 +14,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-blazar_package_state: "latest"
+blazar_package_state: latest
+blazar_pip_package_state: latest
 
 blazar_git_repo: https://git.openstack.org/openstack/blazar
 blazar_git_install_branch: master
