--- a/tasks/blazar_service_setup.yml
+++ b/tasks/blazar_service_setup.yml
@@ -29,6 +29,7 @@
   until: add_service|success
   retries: 5
   delay: 2
+  no_log: true
 
 # Create an admin user
 - name: Ensure blazar user
@@ -47,6 +48,7 @@
   until: add_service|success
   retries: 5
   delay: 10
+  no_log: true
 
 # Add role to the user
 - name: Ensure blazar user to admin role
@@ -65,6 +67,7 @@
   until: add_service|success
   retries: 5
   delay: 10
+  no_log: true
 
 # Create an endpoint
 - name: Ensure blazar endpoint
@@ -91,3 +94,4 @@
   delay: 10
   tags:
     - blazar-setup
+  no_log: true
