Fix functional tests for Blazar
The functional test check the responsiveness of the Blazar API. A
return of 204 code from the API verifies the success.

Rest of the changes ensure compliance with all the standards required
to make the linter and docs tests pass.

Change-Id: I640877817ad1ae312436932af87ad15094616f12
(cherry picked from commit 0ad0677d26bf120743bf4229ad1a46acdae2f396)

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -29,7 +29,7 @@ galaxy_info:
   galaxy_tags:
     - cloud
     - python
-    - congress
+    - blazar
     - development
     - openstack
 dependencies:
