--- a/tasks/blazar_db_setup.yml
+++ b/tasks/blazar_db_setup.yml
@@ -43,7 +43,7 @@
 - name: Create blazar database schema
   command: >
     {{ blazar_bin }}/blazar-db-manage
-    --config-file {{ blazar_conf_dir }}/blazar.conf upgrade head
+    --config-file {{ blazar_etc_dir }}/blazar.conf upgrade head
   become: yes
   become_user: "{{ blazar_system_user_name }}"
   changed_when: False
