--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ commands =
     /usr/bin/find . -type f -name "*.pyc" -delete
 passenv =
     HOME
+    USER
     http_proxy
     HTTP_PROXY
     https_proxy
