--- a/tests/os_blazar-overrides.yml
+++ b/tests/os_blazar-overrides.yml
@@ -15,6 +15,8 @@
 
 # Use the tests repo values
 blazar_galera_address: "{{ test_galera_host }}"
+blazar_rabbitmq_vhost: /blazar
+blazar_rabbitmq_userid: blazar
 
 # Required settings with no defaults
 blazar_service_password: "secrete"
