--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -20,8 +20,8 @@
     check:
       jobs:
         - openstack-ansible-linters
-        - openstack-ansible-functional-ubuntu-xenial:
-            voting: false
+        - openstack-ansible-functional-ubuntu-xenial
     gate:
       jobs:
         - openstack-ansible-linters
+        - openstack-ansible-functional-ubuntu-xenial
