Add packages required for osprofiler
The following packages are required in-order to run osprofiler.
these packages will provide deployers the ability to profile
a service on demand should they choose to enable the profile
functionality.

Change-Id: Ie33e8944c4be002f12f47916d26393cc43203f4f
Signed-off-by: Kevin Carter <kevin.carter@rackspace.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,6 +40,7 @@ blazar_requires_pip_packages:
 ## Common PIP requirements
 blazar_pip_packages:
   - blazar
+  - osprofiler
   - python-blazarclient
 
 ## blazar developer constraint
