Move database creation into role
There is no record for why we implement the database creation outside
of the role in the playbook, when we could do it inside the role.

Implementing it inside the role allows us to reduce the quantity of
group_vars duplicated from the role, and allows us to better document
the required variables in the role. The delegation can still be done
as it is done in the playbook too.

In this patch we implement a new variable called 'blazar_db_setup_host'
which is used in the role to allow delegation of the database setup
task to any host, but defaults to the first member of the galera_all
host group. We also document the variable blazar_galera_address which
has been used for a long time, but never documented. A bunch of unused
variables have also been removed.

Change-Id: Id500e2b2a5b981609becc883edd3d166f70103f4

--- a/tasks/blazar_db_setup.yml
+++ b/tasks/blazar_db_setup.yml
@@ -14,7 +14,33 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- name: create blazar database schema
+- name: Create DB for service
+  mysql_db:
+    login_user: "{{ galera_root_user }}"
+    login_password: "{{ galera_root_password }}"
+    login_host: "{{ blazar_galera_address }}"
+    name: "{{ blazar_galera_database }}"
+    state: "present"
+  delegate_to: "{{ blazar_db_setup_host }}"
+  no_log: True
+
+- name: Grant access to the DB for the service
+  mysql_user:
+    login_user: "{{ galera_root_user }}"
+    login_password: "{{ galera_root_password }}"
+    login_host: "{{ blazar_galera_address }}"
+    name: "{{ blazar_galera_user }}"
+    password: "{{ blazar_container_mysql_password }}"
+    host: "{{ item }}"
+    state: "present"
+    priv: "{{ blazar_galera_database }}.*:ALL"
+  delegate_to: "{{ blazar_db_setup_host }}"
+  with_items:
+    - "localhost"
+    - "%"
+  no_log: True
+
+- name: Create blazar database schema
   command: >
     {{ blazar_bin }}/blazar-db-manage
     --config-file {{ blazar_conf_dir }}/blazar.conf upgrade head
