Switch non-voting jobs to use Zuul stanza
The extra jobs that we have are not something that is needed, we simply can
set the jobs to non-voting in the project definition and avoid having non
voting jobs.

Change-Id: I45d7316b7c7392ebe6b50b590cac8790cbdf44d3

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -17,7 +17,8 @@
     check:
       jobs:
         - openstack-ansible-linters
-        - openstack-ansible-functional-ubuntu-xenial-nv
+        - openstack-ansible-functional-ubuntu-xenial:
+            voting: false
     gate:
       jobs:
         - openstack-ansible-linters
