--- a/tasks/blazar_service_setup.yml
+++ b/tasks/blazar_service_setup.yml
@@ -26,7 +26,7 @@
     description: "{{ blazar_service_description }}"
     insecure: "{{ keystone_service_adminuri_insecure }}"
   register: add_service
-  until: add_service|success
+  until: add_service is success
   retries: 5
   delay: 2
   no_log: true
@@ -45,7 +45,7 @@
     insecure: "{{ keystone_service_adminuri_insecure }}"
   register: add_service
   when: not blazar_service_in_ldap | bool
-  until: add_service|success
+  until: add_service is success
   retries: 5
   delay: 10
   no_log: true
@@ -64,7 +64,7 @@
     insecure: "{{ keystone_service_adminuri_insecure }}"
   register: add_service
   when: not blazar_service_in_ldap | bool
-  until: add_service|success
+  until: add_service is success
   retries: 5
   delay: 10
   no_log: true
@@ -89,7 +89,7 @@
       - url: "{{ blazar_service_adminurl }}"
         interface: "admin"
   register: add_service
-  until: add_service|success
+  until: add_service is success
   retries: 5
   delay: 10
   tags:
