Execute service setup against a delegated host using Ansible built-in modules
In order to reduce the packages required to pip install on to the hosts,
we allow the service setup to be delegated to a specific host, defaulting
to the deploy host. We also switch as many tasks as possible to using the
built-in Ansible modules which make use of the shade library.

The 'virtualenv' package is now installed appropriately by the openstack_hosts
role, so there's no need to install it any more. The 'httplib2' package is a
legacy Ansible requirement for the get_url/get_uri module which is no longer
needed. The keystone client library is not required any more now that we're
using the upstream modules. As there are no required packages left, the task
to install them is also removed.

With the dependent patches, the openstack_openrc role is now executed once
on the designated host, so it is no longer required as a meta-dependency for
the role.

Change-Id: Ib41f12b837f73ea534c6a0f926a70f7a82d7a194

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Set the host which will execute the shade modules
+# for the service setup. The host must already have
+# clouds.yaml properly configured.
+blazar_service_setup_host: "{{ openstack_service_setup_host | default('localhost') }}"
+
 blazar_package_state: latest
 blazar_pip_package_state: latest
 
@@ -29,13 +34,6 @@ blazar_bin: "/openstack/venvs/blazar-{{ blazar_venv_tag }}/bin"
 blazar_venv_download_url: http://127.0.0.1/venvs/untagged/ubuntu/blazar.tgz
 blazar_etc_dir: /etc/blazar
 blazar_config_option: "--config-file {{ blazar_etc_dir }}/blazar.conf"
-
-## Required PIP packages
-blazar_requires_pip_packages:
-  - tox
-  - virtualenv
-  - virtualenv-tools
-  - python-keystoneclient
 
 ## Common PIP requirements
 blazar_pip_packages:
