--- a/tasks/blazar_service_setup.yml
+++ b/tasks/blazar_service_setup.yml
@@ -14,84 +14,82 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- name: Ensure blazar service
-  keystone:
-    command: "ensure_service"
-    endpoint: "{{ keystone_service_adminurl }}"
-    login_user: "{{ keystone_admin_user_name }}"
-    login_password: "{{ keystone_auth_admin_password }}"
-    login_project_name: "{{ keystone_admin_tenant_name }}"
-    service_name: "{{ blazar_service_name }}"
-    service_type: "{{ blazar_service_type }}"
-    description: "{{ blazar_service_description }}"
-    insecure: "{{ keystone_service_adminuri_insecure }}"
-  register: add_service
-  until: add_service is success
-  retries: 5
-  delay: 2
-  no_log: true
+# We set the python interpreter to the ansible runtime venv if
+# the delegation is to localhost so that we get access to the
+# appropriate python libraries in that venv. If the delegation
+# is to another host, we assume that it is accessible by the
+# system python instead.
+- name: Setup the service
+  delegate_to: "{{ blazar_service_setup_host }}"
+  vars:
+    ansible_python_interpreter: >-
+      {{ (blazar_service_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable']) }}
+  block:
+    - name: Add service to the keystone service catalog
+      os_keystone_service:
+        cloud: default
+        state: present
+        name: "{{ blazar_service_name }}"
+        service_type: "{{ blazar_service_type }}"
+        description: "{{ blazar_service_description }}"
+        endpoint_type: admin
+        verify: "{{ not keystone_service_adminuri_insecure }}"
+      register: add_service
+      until: add_service is success
+      retries: 5
+      delay: 10
 
-# Create an admin user
-- name: Ensure blazar user
-  keystone:
-    command: "ensure_user"
-    endpoint: "{{ keystone_service_adminurl }}"
-    login_user: "{{ keystone_admin_user_name }}"
-    login_password: "{{ keystone_auth_admin_password }}"
-    login_project_name: "{{ keystone_admin_tenant_name }}"
-    user_name: "{{ blazar_service_user_name }}"
-    tenant_name: "{{ blazar_service_project_name }}"
-    password: "{{ blazar_service_password }}"
-    insecure: "{{ keystone_service_adminuri_insecure }}"
-  register: add_service
-  when: not blazar_service_in_ldap | bool
-  until: add_service is success
-  retries: 5
-  delay: 10
-  no_log: true
+    - name: Add service user
+      os_user:
+        cloud: default
+        state: present
+        name: "{{ blazar_service_user_name }}"
+        password: "{{ blazar_service_password }}"
+        domain: default
+        default_project: "{{ blazar_service_project_name }}"
+        endpoint_type: admin
+        verify: "{{ not keystone_service_adminuri_insecure }}"
+      register: add_service
+      when: not blazar_service_in_ldap | bool
+      until: add_service is success
+      retries: 5
+      delay: 10
+      no_log: True
 
-# Add role to the user
-- name: Ensure blazar user to admin role
-  keystone:
-    command: "ensure_user_role"
-    endpoint: "{{ keystone_service_adminurl }}"
-    login_user: "{{ keystone_admin_user_name }}"
-    login_password: "{{ keystone_auth_admin_password }}"
-    login_project_name: "{{ keystone_admin_tenant_name }}"
-    user_name: "{{ blazar_service_user_name }}"
-    tenant_name: "{{ blazar_service_project_name }}"
-    role_name: "{{ blazar_role_name }}"
-    insecure: "{{ keystone_service_adminuri_insecure }}"
-  register: add_service
-  when: not blazar_service_in_ldap | bool
-  until: add_service is success
-  retries: 5
-  delay: 10
-  no_log: true
+    - name: Add service user to admin role
+      os_user_role:
+        cloud: default
+        state: present
+        user: "{{ blazar_service_user_name }}"
+        role: "{{ blazar_role_name }}"
+        project: "{{ blazar_service_project_name }}"
+        endpoint_type: admin
+        verify: "{{ not keystone_service_adminuri_insecure }}"
+      register: add_service
+      when: not blazar_service_in_ldap | bool
+      until: add_service is success
+      retries: 5
+      delay: 10
 
-# Create an endpoint
-- name: Ensure blazar endpoint
-  keystone:
-    command: "ensure_endpoint"
-    endpoint: "{{ keystone_service_adminurl }}"
-    login_user: "{{ keystone_admin_user_name }}"
-    login_password: "{{ keystone_auth_admin_password }}"
-    login_project_name: "{{ keystone_admin_tenant_name }}"
-    region_name: "{{ blazar_service_region }}"
-    service_name: "{{ blazar_service_name }}"
-    service_type: "{{ blazar_service_type }}"
-    insecure: "{{ keystone_service_adminuri_insecure }}"
-    endpoint_list:
-      - url: "{{ blazar_service_publicurl }}"
-        interface: "public"
-      - url: "{{ blazar_service_internalurl }}"
-        interface: "internal"
-      - url: "{{ blazar_service_adminurl }}"
-        interface: "admin"
-  register: add_service
-  until: add_service is success
-  retries: 5
-  delay: 10
-  tags:
-    - blazar-setup
-  no_log: true
+    - name: Add endpoints to keystone endpoint catalog
+      os_keystone_endpoint:
+        cloud: default
+        state: present
+        service: "{{ blazar_service_name }}"
+        endpoint_interface: "{{ item.interface }}"
+        url: "{{ item.url }}"
+        region: "{{ blazar_service_region }}"
+        endpoint_type: admin
+        verify: "{{ not keystone_service_adminuri_insecure }}"
+      register: add_service
+      until: add_service is success
+      retries: 5
+      delay: 10
+      with_items:
+        - interface: "public"
+          url: "{{ blazar_service_publicurl }}"
+        - interface: "internal"
+          url: "{{ blazar_service_internalurl }}"
+        - interface: "admin"
+          url: "{{ blazar_service_adminurl }}"
+
