use include_tasks instead of include
include is marked as deprecated since ansible 2.4[0]

Switch to include_tasks or import_playbook as necessary

[0] https://docs.ansible.com/ansible/2.4/include_module.html#deprecated

Change-Id: I3c341295715f974a30eed72c0a1c2f2fdcdf8bb3

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -14,16 +14,16 @@
 # limitations under the License.
 
 # Setup the host
-- include: common/test-setup-host.yml
+- import_playbook: common/test-setup-host.yml
 
 # Install RabbitMQ/MariaDB
-- include: common/test-install-infra.yml
+- import_playbook: common/test-install-infra.yml
 
 # Install Keystone
-- include: common/test-install-keystone.yml
+- import_playbook: common/test-install-keystone.yml
 
 # Install Blazar Installation
-- include: test-install-blazar.yml
+- import_playbook: test-install-blazar.yml
 
 # Test Blazar Functional
-- include: test-blazar-functional.yml
+- import_playbook: test-blazar-functional.yml
