--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,15 +26,15 @@
   tags:
     - always
 
-- include: blazar_pre_install.yml
+- include_tasks: blazar_pre_install.yml
   tags:
     - blazar-install
 
-- include: blazar_install.yml
+- include_tasks: blazar_install.yml
   tags:
     - blazar-install
 
-- include: blazar_post_install.yml
+- include_tasks: blazar_post_install.yml
   tags:
     - blazar-config
 
@@ -66,13 +66,13 @@
     - blazar-config
     - systemd-service
 
-- include: blazar_db_setup.yml
+- include_tasks: blazar_db_setup.yml
   when:
     - "inventory_hostname == ((groups['blazar']| intersect(ansible_play_hosts)) | list)[0]"
   tags:
     - blazar-config
 
-- include: blazar_service_setup.yml
+- include_tasks: blazar_service_setup.yml
   when:
     - "inventory_hostname == ((groups['blazar']| intersect(ansible_play_hosts)) | list)[0]"
   tags:
