--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,9 +38,33 @@
   tags:
     - blazar-config
 
-- include: "blazar_init_{{ ansible_service_mgr }}.yml"
+- name: Run the systemd service role
+  include_role:
+    name: systemd_service
+    private: true
+  vars:
+    systemd_user_name: "{{ blazar_system_user_name }}"
+    systemd_group_name: "{{ blazar_system_group_name }}"
+    systemd_tempd_prefix: openstack
+    systemd_slice_name: blazar
+    systemd_lock_path: /var/lock/blazar
+    systemd_CPUAccounting: true
+    systemd_BlockIOAccounting: true
+    systemd_MemoryAccounting: true
+    systemd_TasksAccounting: true
+    systemd_services:
+      - service_name: "{{ service_var.service_name }}"
+        enabled: yes
+        state: started
+        execstarts: "{{ service_var.execstarts }}"
+        execreloads: "{{ service_var.execreloads | default([]) }}"
+        config_overrides: "{{ service_var.init_config_overrides }}"
+  with_items: "{{ filtered_blazar_services }}"
+  loop_control:
+    loop_var: service_var
   tags:
     - blazar-config
+    - systemd-service
 
 - include: blazar_db_setup.yml
   when:
