--- a/tasks/blazar_install.yml
+++ b/tasks/blazar_install.yml
@@ -25,6 +25,18 @@
   retries: 5
   delay: 2
 
+- name: Install distro packages
+  package:
+    name: "{{ almanach_developer_mode_distro_packages }}"
+    state: "{{ blazar_package_state }}"
+    update_cache: "{{ (ansible_pkg_mgr in ['apt', 'zypper']) | ternary('yes', omit) }}"
+    cache_valid_time: "{{ (ansible_pkg_mgr == 'apt') | ternary(cache_timeout, omit) }}"
+  when: blazar_developer_mode | bool
+  register: install_packages
+  until: install_packages is success
+  retries: 5
+  delay: 2
+
 - name: Create developer mode constraint file
   copy:
     dest: "/opt/developer-pip-constraints.txt"
